Removing pdf files, and add shell commands to create the pdfs from latex automatically (via abused Makefile)
Good practice not to store derived files in repositories (if they can be
easily reproduced).

--- a/devtests/demag/docu/truncdemag1.tex
+++ b/devtests/demag/docu/truncdemag1.tex
@@ -9,7 +9,7 @@
 \begin{document}
 \maketitle
 
-\abstract{}
+\begin{abstract}
 In this document the mathematics of the program truncdemag1.py are explained. The demagnetisation field is found
 using an approach that truncates an infinite domain and uses one scalar potential.
 \end{abstract}
