--- a/devtests/demag/docu/magstyle.sty
+++ b/devtests/demag/docu/magstyle.sty
@@ -5,3 +5,4 @@
 \newcommand{\omM}{\Omega_M}
 \newcommand{\domM}{\partial \Omega_M}
 \newcommand{\omV}{\Omega_V}
+\newcommand{\rvec}{\overrightarrow{r}}
