prefer non-italic for descriptive labels (such as 'demag') and operator names (such as 'supp')

--- a/devtests/demag/docu/demagnetisationfield.tex
+++ b/devtests/demag/docu/demagnetisationfield.tex
@@ -127,7 +127,7 @@ continuity at the cost of matching the normal derivative jump condition, and vic
 We can now formulate the Nitsche formulation for $\phi$. Since we are only interested in applying a jump condition
 $ [\nabla \phi]  \cdotp n =  M \cdotp n $ on the magnetic core boundary $\domM$, we can sew together two continuous functions
 together with Nitsche's method to get the result we need. Let $\phi = (\phi_0,\phi_1)$ where
-$supp(\phi_1) \subset \omM$ and $supp(\phi_0) \subset \omV$. The Nitsche variational problem is find  $\phi = (\phi_0,\phi_1)$ such that
+$\\supp(\phi_1) \subset \omM$ and $\supp(\phi_0) \subset \omV$. The Nitsche variational problem is find  $\phi = (\phi_0,\phi_1)$ such that
 
 \begin{eqnarray*}
 &&\int_{\omM} \nabla \phi_1 \cdotp \nabla v_1 \ dx + \int_{\omV} \nabla \phi_0 \cdotp \nabla v_0 \ dx \\
