--- a/devtests/demag/docu/magstyle.sty
+++ b/devtests/demag/docu/magstyle.sty
@@ -1,10 +1,10 @@
 %Micromagnetics Style File
 
 \newcommand{\mvec}[1]{\mathbf{#1}}
-\newcommand{\dmag}{\overrightarrow{H}_\mathrm{demag}}
-\newcommand{\magn}{\overrightarrow{M}}
+\newcommand{\dmag}{\mvec{H}_\mathrm{demag}}
+\newcommand{\magn}{\mvec{M}}
 \newcommand{\omM}{\Omega_M}
 \newcommand{\domM}{\partial \Omega_M}
 \newcommand{\omV}{\Omega_V}
-\newcommand{\rvec}{\overrightarrow{r}}
+\newcommand{\rvec}{\mvec{r}}
 \newcommand{\supp}{\operatorname{supp}}
