--- a/devtests/demag/docu/magstyle.sty
+++ b/devtests/demag/docu/magstyle.sty
@@ -8,3 +8,5 @@
 \newcommand{\omV}{\Omega_V}
 \newcommand{\rvec}{\mvec{r}}
 \newcommand{\supp}{\operatorname{supp}}
+\setlength{\marginparwidth}{1.2in}
+
