[#24824325] Updated the README.

--- a/doc/README
+++ b/doc/README
@@ -1,1 +1,48 @@
-To create documentation...
+# README on generating documentation for Finmag.
+# Written by Anders E. Johansen 23/2/2012
+
+To view documentation:
+----------------------
+
+1. Navigate to /finmag/doc/
+2. $ python generate_doc.py
+3. $ make html
+4. $ firefox _build/html/index.html
+
+
+Writing documentation:
+----------------------
+
+We are using Sphinx (http://sphinx.pocoo.org/) to generate documentation. Basic use includes simple inline markup, using mathematics in LaTeX syntax, and code snippets.
+
+See for example http://fenicsproject.org/contributing/styleguide_doc.html#styleguide-documentation for more information on this.
+
+When you have documented your code, and want to add it to the html files, please do as follows:
+
+i)    Open /finmag/doc/modules.txt
+ii)   Add to the list of modules a line containing the name you want in the webpage header (this can be several words separated by spaces) and the path to the module (this must NOT include spaces or /).
+iii)  Repeat steps 1-4 above.
+
+
+Important:
+----------
+
+When documenting a class structure, Sphinx does not include docstrings from __init__, so please put these in the first line in the class instead. I.e. do
+
+class Foo:
+    """
+    Docstring is here.
+    """
+
+    def __init__(self, *args):
+
+
+instead of
+
+class Bar:
+    def __init__(self, *args):
+        """
+        Docstring should not be here.
+        """
+
+The author of this README has not yet figured out how to get syntax highlighting on the code snippets without adding >>> in front of every line, so please continue with this until further notice. If someone knows how to do this, please tell me.
