--- a/devtests/demag/docu/demagnetisationfield.tex
+++ b/devtests/demag/docu/demagnetisationfield.tex
@@ -52,14 +52,14 @@ The poisson problem for the scalar potential $\phi$ reads
 
 \begin{subequations}
 \begin{align}
-&\mbox{jump} \left( \frac{\partial \phi}{\partial n} \right) = n \cdotp \magn  &\mbox{ on }  \domM \label{jumpbc} \\
+&\ \left[ \frac{\partial \phi}{\partial n} \right] = n \cdotp \magn  &\mbox{ on }  \domM \label{jumpbc} \\
 &\lim_{\mvec{r} \in \omM \rightarrow \domM} \phi =  \lim_{\mvec{r} \in \omV \rightarrow \domM} 
 \phi & \mbox{on } \domM \label{contbc} \\
 &\phi \rightarrow 0 \ & \mbox{as} \ |\rvec| \in \omV \rightarrow \infty \label{openbc}
 \end{align}
 \end{subequations}
 
-\noindent Where $n$ denotes the unit outward normal. The prescribed jump in the normal derivative is a 
+\noindent Where $n$ denotes the unit outward normal. The prescribed jump in the normal derivative (denoted by $[ ]$) is a 
 consequence of the divergence theorem applied to the definition of $\dmag$, equation~(\ref{dmagdef}).
 Using equation~(\ref{nocurl}) and Stokes' theorem we see that the tangential component of $\nabla \phi$ or $\dmag$ is
 continuous over $\domM$. Which means that the scalar potential only differs by a constant as it crosses $\domM$.
@@ -75,15 +75,18 @@ Since a computer cannot simulate an infinite domain there needs to be some way o
 Here the domain $\omV$ is truncated, using the rule of thumb that it should be about 5 times as large as $\omM$ in order to get
 decent results. 
 
-\section{The Discontinuous Galerkin formulation for $\phi$}
+\section{The Discontinuous Galerkin formulation for $\phi$}\label{dgsection}
 The discontinuous Galerkin formulation is a finite element discretization scheme where the 
 solution is allowed to be discontinuous across element boundaries. The solution space for 
 $\phi$ is restricted to 
-\[ V = \{ v \in H^1 (T) \mbox{ for all } T \subset \Omega \mbox{ s.t. v is discontinous over } 
-\ \partial T \} \]
+\begin{equation}\label{dgdef} 
+ V = \{ v \in H^1 (T) \mbox{ for all } T \subset \Omega \mbox{ s.t. v is discontinous over } \ \partial T \}
+\end{equation}
+
 \marginpar{\scriptsize Can you spell out what you mean with ``s.t. v`` and $T$ and $H^1$? This is standard stuff, but would be useful to be spelled out here for the non-FE experts.}
 
-\noindent Where $\Omega$ denotes the mesh and $T$ a finite element domain in $\Omega$. After integrating
+\noindent Where $\Omega$ denotes the mesh and $T$ a finite element domain in $\Omega$. More detail regarding this
+definition is give in appendix \ref{appdgspace}. After integrating
 equation~(\ref{phidef}) by parts we obtain the formulation.
 \\
 \\
@@ -96,14 +99,14 @@ holds for all test functions $v \in V $. Here $f(\rvec) = - \nabla \cdotp (M)$ f
 for $\rvec \in \omV$.
 
 \section{Nitsche's Method for $\phi$}
-Continuing with the discontinuous Galerkin formulation we introduce the notation for the jump
+Continuing with the discontinuous Galerkin formulation we reintroduce the notation for the jump
 of a function $A$ across a boundary with predefined '+' and '--' sides. 
 \[ [A] = A^+ - A^- \]
 Similarly the average is defined to be
 \[ <A> = \frac{1}{2} (A^+ + A^-) \]
 \\
 \marginpar{\scriptsize What do we mean with $[AB]$? A jump of the product of two functions $A$ and $B$? Something else?}
-A simple calculation gives the following relation
+A simple calculation gives the following relation for the jump of the product of two functions.
 \[ [AB] = [A]<B> + <A>[B] \]
 which we can now use on the boundary term of equation~(\ref{dgform}). The sum over boundaries of each element 
 visits every facet twice, so we can instead replace it with a sum over each facet $\sum_S$, taking into account that
@@ -172,5 +175,23 @@ The Fredkin-Koehler solver solves for these two directly using domain truncation
 
 \noindent Adding together the two potentials $\phi_1$ and $\phi_2$ should result in the solution to the problem described in
 truncdemag1. 
+
+\section*{Appendix}
+\appendix
+\section{Explanation of the definition of the discontinuous finite element space $\ref{dgdef}$ }\label{appdgspace}
+In section \ref{dgsection} describing the discontinuous FE space the following definition is made.
+\[
+ V = \{ v \in H^1 (T) \mbox{ for all } T \subset \Omega \mbox{ s.t. v is discontinous over } \ \partial T \}
+\]
+Here $H^1(T)$ is the sobolev space 
+\[ \left\{ v \in H^1(T) \mbox{ if } v \in L^2(T) \mbox{ and } \frac{\partial v}{\partial x_i} \in L^2(T) \ \forall 
+i \in \{1...,dim(\Omega)\}  \right\} \]
+\\
+where the partial derivatives are to be understood in the weak sense.
+The possible discontinuities along element boundaries of a function $v \in V$ mean that a weak derivative cannot be 
+defined globally. However when we restrict $v$ to a finite element domain it becomes continuous, which 
+means we can define the global discontinuous function space $V$ by patching together local continuous function spaces. 
+
+
 
 \end{document}          
